--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.21",
     "axios": "^1.9.0",
+    "form-data": "^4.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "reflect-metadata": "^0.2.2",
