--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.21",
     "axios": "^1.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "elevenlabs": "^1.57.0",
     "form-data": "^4.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "openai": "^4.96.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0"
